--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+    /* tailwind bg purple */
+    --sky-500: rgb(14, 165, 233);
+    --sky-700: rgb(3, 105, 161);
+    /* tailwind text gray */
+    --text-zinc-50: rgb(250 250 250);
+    --text-zinc-100: rgb(244 244 245);
+    --text-zinc-200: rgb(228 228 231);
+    --text-zinc-300: rgb(212 212 216);
+    --text-zinc-400: rgb(161 161 170);
+    --text-zinc-500: rgb(113 113 122);
+    --text-zinc-600: rgb(82 82 91);
+    --text-zinc-700: rgb(63 63 70);
+    --text-zinc-800: rgb(39 39 42);
+    --text-zinc-900: rgb(24 24 27);
+}
+
+.main-text-box {
+    background-color: white;
+    color: var(--text-zinc-600);
+    box-shadow: 1px 1px 0 var(--sky-700), 2px 2px 0 var(--sky-700), 3px 3px 0 var(--sky-700), 4px 4px 0 var(--sky-700), 5px 5px 0 var(--sky-700), 6px 6px 0 var(--sky-700), 7px 7px 0 var(--sky-700), 8px 8px 0 var(--sky-700), 9px 9px 0 var(--sky-700), 10px 10px 0 var(--sky-700), 11px 11px 0 var(--sky-700), 12px 12px 0 var(--sky-700), 13px 13px 0 var(--sky-700), 14px 14px 0 var(--sky-700), 15px 15px 0 var(--sky-700), 16px 16px 0 var(--sky-700), 17px 17px 0 var(--sky-700), 18px 18px 0 var(--sky-700), 19px 19px 0 var(--sky-700), 20px 20px 0 var(--sky-700), 21px 21px 0 var(--sky-700), 22px 22px 0 var(--sky-700), 23px 23px 0 var(--sky-700), 24px 24px 0 var(--sky-700), 25px 25px 0 var(--sky-700), 26px 26px 0 var(--sky-700), 27px 27px 0 var(--sky-700), 28px 28px 0 var(--sky-700), 29px 29px 0 var(--sky-700), 30px 30px 0 var(--sky-700), 31px 31px 0 var(--sky-700), 32px 32px 0 var(--sky-700), 33px 33px 0 var(--sky-700), 34px 34px 0 var(--sky-700), 35px 35px 0 var(--sky-700), 36px 36px 0 var(--sky-700), 37px 37px 0 var(--sky-700), 38px 38px 0 var(--sky-700), 39px 39px 0 var(--sky-700), 40px 40px 0 var(--sky-700), 41px 41px 0 var(--sky-700), 42px 42px 0 var(--sky-700), 43px 43px 0 var(--sky-700), 44px 44px 0 var(--sky-700), 45px 45px 0 var(--sky-700), 46px 46px 0 var(--sky-700), 47px 47px 0 var(--sky-700), 48px 48px 0 var(--sky-700), 49px 49px 0 var(--sky-700), 50px 50px 0 var(--sky-700), 51px 51px 0 var(--sky-700), 52px 52px 0 var(--sky-700), 53px 53px 0 var(--sky-700), 54px 54px 0 var(--sky-700), 55px 55px 0 var(--sky-700), 56px 56px 0 var(--sky-700), 57px 57px 0 var(--sky-700), 58px 58px 0 var(--sky-700), 59px 59px 0 var(--sky-700), 60px 60px 0 var(--sky-700), 61px 61px 0 var(--sky-700), 62px 62px 0 var(--sky-700), 63px 63px 0 var(--sky-700), 64px 64px 0 var(--sky-700), 65px 65px 0 var(--sky-700), 66px 66px 0 var(--sky-700), 67px 67px 0 var(--sky-700), 68px 68px 0 var(--sky-700), 69px 69px 0 var(--sky-700), 70px 70px 0 var(--sky-700), 71px 71px 0 var(--sky-700), 72px 72px 0 var(--sky-700), 73px 73px 0 var(--sky-700), 74px 74px 0 var(--sky-700), 75px 75px 0 var(--sky-700);
+    width: 66vw;
+    height: 24px;
+    transform: translate(17vw, 0);
+    border: none;
+    padding-bottom: 4px;
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.autofill {
+    display: flex;
+    flex: 1 1 auto;
+    flex-flow: column;
 }
